TheAgarwalBlog/playlists/RockMusic/RockMusicListeningParty-25.04.css
body {
    background-color: #111;
    color: #ddd;

    font-family: "Ysabeau SC", sans-serif;
    font-optical-sizing: auto;
    font-weight: 200;
    font-style: normal;
    text-shadow: 1px 1px 5px black, 1px 1px 5px black, 1px 1px 5px black;

}

h1 {
    font-weight: 800;
}

.song-lyrics {
    white-space: pre-wrap;
}

.song {
    padding-top: 10vh;
    padding-bottom: 10vh;
    
    margin-left: 5%;
}

#have-a-cigar.song {
    padding-bottom: 20vh;
}
#man-in-the-box.song {
    padding-bottom: 20vh;
}

.song-bg {
    
    -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
    -o-filter: blur(5px);
    -ms-filter: blur(5px);
    filter: blur(5px);
    
    position: absolute;
    z-index: -10;
    width: 50vw;
    height: 50vw;
    
}

#stairway-to-heaven.song-bg{
    background: url("led-zeppelin-4.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}


#plush.song-bg{
    background: url("core.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}


#going-under.song-bg{
    background: url("fallen.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}


#carnival-of-rust.song-bg{
    background: url("carnival-of-rust.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}


#have-a-cigar.song-bg{
    background: url("have-a-cigar.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

#man-in-the-box.song-bg{
    background: url("man-in-the-box.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

#i-am-the-highway.song-bg{
    background: url("i-am-the-highway.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}


#overflow.song-bg{
    background: url("overflow.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}


#summer-of-69.song-bg{
    background: url("summer-of-69.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

#sympathy-for-the-devil.song-bg{
    background: url("sympathy-for-the-devil.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

#thunderstruck.song-bg{
    background: url("thunderstruck.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

#new-divide.song-bg{
    background: url("new-divide.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

#numb.song-bg{
    background: url("numb.jpg");
    background-size: 75%;
    background-repeat: no-repeat;
    background-position-x: 10vw;
    background-position-y: 20vh;
}

